--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 Jonathan Valdez is a musician, audio engineer, composer, DJ, music producer, & sound designer who lives and works in Austin,TX. 
 
-<a href="https://www.discogs.com/artist/6426714-Jonathan-Valdez-2"> Discogs Profile </a>
-<a href="https://berkeley-and-jonathan.bandcamp.com">Berkeley & Jonathan Bandcamp Page</a>
-<a href="https://soundcloud.com/jonathan_valdez">Soundcloud</a> 
-<a href="https://cokehead2020.bandcamp.com">Collaboration with Bill Converse</a>
-<a href="https://twitter.com/_jonathanvaldez">Twitter </a>
-<a href="/pastperformances.html">Link to past performances</a>
+<br/><a href="https://www.discogs.com/artist/6426714-Jonathan-Valdez-2"> Discogs Profile </a>
+<br/><a href="https://berkeley-and-jonathan.bandcamp.com">Berkeley & Jonathan Bandcamp Page</a>
+<br/><a href="https://soundcloud.com/jonathan_valdez">Soundcloud</a> 
+<br/><a href="https://cokehead2020.bandcamp.com">Collaboration with Bill Converse</a>
+<br/><a href="https://twitter.com/_jonathanvaldez">Twitter </a>
+<br/><a href="/pastperformances.html">Link to past performances</a>
 
-Email jnthn.vldzz to for Audio or Recording Engineering rates, to book DJ or live performances, or receive Sound Design reel.
+<br/>Email jnthn.vldzz to for Audio or Recording Engineering rates, to book DJ or live performances, or receive Sound Design reel.
