--- a/index.html
+++ b/index.html
@@ -7,4 +7,4 @@ Jonathan Valdez is a musician, audio engineer, composer, DJ, music producer, & s
 <br/><a href="https://twitter.com/_jonathanvaldez">Twitter </a>
 <br/><a href="/pastperformances.html">Link to past performances</a>
 
-<br/>Email jnthn.vldzz to for Audio or Recording Engineering rates, to book DJ or live performances, or receive Sound Design reel.
+<br/>Email jnthn.vldzz@gmail.com to for Audio or Recording Engineering rates, to book DJ or live performances, or receive Sound Design reel.
