--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@ Jonathan Valdez is a musician, audio engineer, composer, DJ, music producer, & s
 <br/><a href="https://www.discogs.com/artist/6426714-Jonathan-Valdez-2"> Discogs Profile </a>
 <br/><a href="https://berkeley-and-jonathan.bandcamp.com">Berkeley & Jonathan Bandcamp Page</a>
 <br/><a href="https://soundcloud.com/jonathan_valdez">Soundcloud</a> 
-<br/><a href="https://cokehead2020.bandcamp.com">Collaboration with Bill Converse</a>
 <br/><a href="https://twitter.com/_jonathanvaldez">Twitter </a>
 <br/><a href="/pastperformances.html">Link to past performances</a>
 
-<br/>Email jnthn.vldzz@gmail.com to for Audio or Recording Engineering rates, to book DJ or live performances, or receive Sound Design reel.
+<br/>Email <a href="mailto:jnthn.vldzz@gmail.com>jnthn.vldzz@gmail.com</a> for Audio or Recording Engineering rates, to book DJ or live performances, or receive Sound Design reel.
