--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@ Jonathan Valdez is a musician, audio engineer, composer, DJ, music producer, & s
 <br/><a href="https://twitter.com/_jonathanvaldez">Twitter </a>
 <br/><a href="/pastperformances.html">Link to past performances</a>
 
-<br/>Email <a href="mailto:jnthn.vldzz@gmail.com>jnthn.vldzz@gmail.com</a> for Audio or Recording Engineering rates, to book DJ or live performances, or receive Sound Design reel.
+<br/>Email <a href="mailto:jnthn.vldzz@gmail.com">jnthn.vldzz@gmail.com</a> for Audio or Recording Engineering rates, to book DJ or live performances, or receive Sound Design reel.
