--- a/index.html
+++ b/index.html
@@ -7,3 +7,5 @@ Jonathan Valdez is a musician, audio engineer, composer, DJ, music producer, & s
 <br/><a href="/pastperformances.html">Link to past performances</a>
 
 <br/>Email <a href="mailto:jnthn.vldzz@gmail.com">jnthn.vldzz@gmail.com</a> for Audio or Recording Engineering rates, to book DJ or live performances, or receive Sound Design reel.
+
+<img src="DSC00077.JPG" />
