--- a/index.html
+++ b/index.html
@@ -8,4 +8,4 @@ Jonathan Valdez is a musician, audio engineer, composer, DJ, music producer, & s
 
 <br/>Email <a href="mailto:jnthn.vldzz@gmail.com">jnthn.vldzz@gmail.com</a> for Audio or Recording Engineering rates, to book DJ or live performances, or receive Sound Design reel.
 
-<img src="DSC00077.JPG" />
+<img src="DSC00077.JPG" width="500" height="600"/>
