--- a/index.html
+++ b/index.html
@@ -8,4 +8,9 @@ Jonathan Valdez is a musician, audio engineer, composer, DJ, music producer, & s
 
 <br/>Email <a href="mailto:jnthn.vldzz@gmail.com">jnthn.vldzz@gmail.com</a> for Audio or Recording Engineering rates, to book DJ or live performances, or receive Sound Design reel.
 
-<br/><img src="DSC00077.JPG" width="700" height="700"/>
+<br/><img src="DSC00077.JPG" width="800" height="800"/>
+<br/><img src="DSC000107.JPG" width="800" height="800"/>
+<br/><img src="DSC000130.JPG" width="800" height="800"/>
+<br/><img src="DSC000131.JPG" width="800" height="800"/>
+<br/><img src="DSC000132.JPG" width="800" height="800"/>
+<br/><img src="DSC000162-.JPG" width="800" height="800"/>
