--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 Jonathan Valdez is a musician, audio engineer, composer, DJ, music producer, & sound designer who lives and works in Austin,TX. 
 
 <br/><a href="https://www.discogs.com/artist/6426714-Jonathan-Valdez-2"> Discogs Profile </a>
-<br/><a href="https://berkeley-and-jonathan.bandcamp.com">Berkeley & Jonathan Bandcamp Page</a>
+<br/><a href="https://berkeley-and-jonathan.bandcamp.com">Berkeley & Jonathan - Bandcamp Page</a>
 <br/><a href="https://soundcloud.com/jonathan_valdez">Soundcloud</a> 
 <br/><a href="https://twitter.com/_jonathanvaldez">Twitter </a>
 <br/><a href="/pastperformances.html">Link to past performances</a>
