--- a/index.html
+++ b/index.html
@@ -13,4 +13,4 @@ Jonathan Valdez is a musician, audio engineer, composer, DJ, music producer, & s
 <br/><img src="DSC00130.JPG" width="800" height="800"/>
 <br/><img src="DSC00131.JPG" width="800" height="800"/>
 <br/><img src="DSC00132.JPG" width="800" height="800"/>
-<br/><img src="DSC00162-.JPG" width="800" height="800"/>
+<br/><img src="DSC00162-.jpg" width="800" height="800"/>
